kfreebsd-10 (10.0~svn233872-2) UNRELEASED; urgency=low

  * Import module lists from kernel-wedge, as they're being removed
    there (see 2.84).
  * Add USB modules to udebs.
  * 921_signal_watchdog.diff: Protection against unexpected new signals.

 -- Robert Millan <rmh@debian.org>  Mon, 16 Apr 2012 20:40:48 +0200

kfreebsd-10 (10.0~svn233872-1) experimental; urgency=low

  * New upstream snapshot.

  [ Robert Millan ]
  * Set -DWITHOUT_KERNEL_SYMBOLS MK knob to make lintian happy.
  * Replace 950_no_stack_protector.diff with -DWITHOUT_SSP build knob.
  * Misc adjustments to make it possible to build with Clang (if enabled
    in debian/rules).
  * Remove ALTQ_NOPCC in kernel configs, it is no longer required by SMP
    systems (see altq_subr.c).
  * Defer SMP kernel option to upstream config.
  * Merge 952_nodebug.diff and the debug bits of
    debian/arch/i386/xen.config into sys/conf/DEBIAN.

 -- Robert Millan <rmh@debian.org>  Wed, 04 Apr 2012 16:18:09 +0200

kfreebsd-10 (10.0~svn232747-1) experimental; urgency=low

  * New upstream snapshot.
    - Removes most USB drivers from main kernel image (reduces our
      sys/*/conf/GENERIC delta).

  [ Robert Millan ]
  * Factorize common options into a single file.

 -- Robert Millan <rmh@debian.org>  Fri, 09 Mar 2012 22:19:14 +0100

kfreebsd-10 (10.0~svn232158-1) experimental; urgency=low

  * New upstream snapshot.
    - Disable adw via in WITHOUT_SOURCELESS_UCODE rather than in GENERIC.

  [ Robert Millan ]
  * Build by GCC 4.6.
  * Lower libc0.1 requirement to 2.11.3-1.
  * Enable pflog.  (Closes: #658677)

 -- Robert Millan <rmh@debian.org>  Sat, 25 Feb 2012 16:55:15 +0100

kfreebsd-10 (10.0~svn230972-1) experimental; urgency=low

  * New upstream snapshot.
    - 903_disable_non-free_drivers.diff: Remove (obsoleted by
      MK_SOURCELESS build option).
    - 999_firmware.diff: Likewise.

 -- Robert Millan <rmh@debian.org>  Sat, 04 Feb 2012 12:20:22 +0100
