@@ -131,7 +131,7 @@
  # The `bpf' device enables the Berkeley Packet Filter.
 --- /dev/null
 +++ b/sys/conf/DEBIAN
-@@ -0,0 +1,48 @@
+@@ -0,0 +1,52 @@
 +# Common options to all Debian GNU/kFreeBSD kernels
 +
 +options		LINPROCFS
@@ -146,6 +146,10 @@
 +device		pf
 +device		pfsync
 +device		pflog
++
++# pty(4) was removed from GENERIC in 10-CURRENT (see rev 233271),
++# but unfortunetely glibc doesn't support pts(4) yet (see #667448).
++device		pty
 +
 +# Full debugger support is disabled by upstream when a branch is close to
 +# release.  Unfortunately this can trigger the appearance of heisenbugs
