@@ -4,8 +4,11 @@ kfreebsd-10 (10.0~svn233872-2) UNRELEASED; urgency=low
     there (see 2.84).
   * Add USB modules to udebs.
   * 921_signal_watchdog.diff: Protection against unexpected new signals.
+  * pty(4) was removed from GENERIC in 10-CURRENT (see rev 233271), but
+    unfortunately glibc doesn't support pts(4) yet (see #667448).
+    Reenable in sys/conf/DEBIAN.
 
- -- Robert Millan <rmh@debian.org>  Mon, 16 Apr 2012 20:40:48 +0200
+ -- Robert Millan <rmh@debian.org>  Wed, 18 Apr 2012 23:53:31 +0200
 
 kfreebsd-10 (10.0~svn233872-1) experimental; urgency=low
 
